# Linux-Assistant

./: README.md  app.py  main.py  pyproject.toml  test.py
templates/: index.html
