[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "google-genai>=2.7.0",
    "gunicorn>=26.0.0",
    "pyinstaller>=6.20.0",
    "pyside6>=6.11.1",
]
